# DivergentChallenge

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
data/: accounts.csv  activities.csv  call_notes.txt  deals.csv
examples/: example_1_focus.md  example_2_risk.md  example_3_weekly.md  example_4_chat.md  example_4_interactive_session.md
src/: cli.py  config.py  llm.py  models.py  orchestrator.py
src/pipeline/: analyzer.py  ingester.py  metrics.py  planner.py  synthesizer.py
src/sources/: gdrive.py  local.py
tests/: conftest.py  test_analyzer.py  test_ingester.py  test_models.py  test_planner.py
